apps/monitoring/alertmgr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmgr
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: cloudflare
spec:
  ingressClassName: nginx
  rules:
  - host: alertmgr.mgmt.sholdee.net
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kube-prometheus-stack-alertmanager
              port:
                number: 9093
  tls:
  - hosts:
    - alertmgr.mgmt.sholdee.net
    secretName: alertmgr-tls-secret
